# Global-mouse

./: PRIVACY.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
